recursion.lessons.recursion.tree.Tree.scala.error
Tree:23: error: ambiguous reference to overloaded definition,
both method - in class Double of type (x: Char)Double
and  method - in class Double of type (x: Short)Double
match expected type ?
		setPos(x,y-)
                          ^